--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: '3'
 services:
+  app:
+    build: .
+    container_name: go-auth-user
+    ports:
+      - "8080:8080"
+    depends_on:
+      - mongodb
+    networks:
+      - app-network
+    restart: on-failure
   mongodb:
+    container_name: mongodb
     ports:
       - 27017:27017
     image: mongodb/mongodb-community-server:6.0-ubi8
@@ -11,3 +22,9 @@ services:
       - type: bind
         source: ./data
         target: /data/db
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
